# soletta

./: .gitignore  .gitmodules  AUTHORS  COPYING  HOW_TO_RELEASE  Kconfig  Makefile  Makefile.am  Makefile.smallos  README  README.kconfig  README.md  autogen.sh  binding.gyp  configure.ac  index.js  lowlevel.js  map.json  package.json  riot.config
.github/: issue_template.md
bindings/nodejs/: build-csdk.sh  build-for-npm.sh  configure-bindings.js  establish-flags.sh  generate-main.awk  generate-main.sh
bindings/nodejs/lib/: aio.js  gpio.js  i2c.js  pwm.js  spi.js  uart.js
bindings/nodejs/samples/: calamari.js
bindings/nodejs/src/: common.h  data.cc  data.h  hijack.c  hijack.cc  hijack.h  sol-uv-integration.c  sol-uv-integration.h  sys-constants.cc  sys-constants.h
bindings/nodejs/tests/: assert-to-console.js  closestSoletta.js  getresult.js  observation-client.js  observation-server.js  payload.js  setup.js  suite.js
bindings/python/: mainloop.c  run_tests.py  setup.py
bindings/python/soletta/: __init__.c  mainloop.c  mainloop.pyx
builders/: EXPERIMENTAL  README  test-builders.sh
builders/common/: common-arduino-compile.sh  common-arduino-prepare.sh  common-compile.sh  common-prepare.sh
builders/platform-arduinodue-riot-arm/: Makefile.app  Makefile.include  Makefile.soletta  compile  flash.sh  prepare
builders/platform-desktop-contiki-x86/: Makefile.soletta  compile  prepare
builders/platform-galileo-microlinux-x86/: compile  flash.sh  prepare
builders/platform-minnowboard-linux-x86/: compile  copy-tree-to-linux-image.sh  hook.sh  prepare
builders/platform-samr21-riot-arm/: Makefile.app  Makefile.soletta  compile  flash.sh  prepare
builders/platform-test/: compile  prepare
builders/sol/: .gitignore  client.go  main.go  server.go  util.go  util_test.go
data/: .gitignore
data/gdb/: libsoletta.so-gdb.py
data/jsons/: 99_board_detect.json  board_detect.json  dependencies.json  platform_detect.json  samples_blacklist.json  sol_platform_detect.json
data/linux-micro/: initial-services.in
data/oic/: core.brightlight.json  core.light.json  oicgen.py
data/schemas/: board-detect.schema  config.schema  node-type-genspec.schema  node-type.schema  platform-detect.schema  sol-platform-detect.schema  uncrustify.schema
data/scripts/: .gitignore  check-api.py  check-samples-dependencies.py  convert-config-to-json.py  dependency-resolver.py  flow-merge-builtins.py  gen-release-note.sh  git-init-submodules.py  json-format-check.sh  json-format.py  libsoletta.sym  sol-builtins-gen.py  sol-flow-node-type-aliases-gen.py.in  sol-flow-node-type-examples-list.py  sol-flow-node-type-find.py.in  sol-flow-node-type-gen-cheat-sheet.py  sol-flow-node-type-gen-html.py  sol-flow-node-type-gen.py  sol-flow-node-type-gen.py.in  sol-flow-node-type-stub-gen.py  sol-flow-node-type-validate.py  sol-flow-node-types-h-gen.py  sol-modules-mk-gen.py  sol-oic-gen.py  suite.py  template.py
data/templates/: builtins-common.tpl  headers-public.tpl
data/vim/: fbp.vim
doc/: .gitignore  Doxyfile  Kconfig
doc/doxygen/: Doxyfile  examples.dox  examples_head.dox  foot.html  head.html  style.css
doc/js-spec/: README.md  aio.md  gpio.md  i2c.md  ioc.md  oic-provisioning.md  oic.md  platform.md  pwm.md  spi.md  uart.md  update.md
doc/node-types-html/: .gitignore  index.html.in  styles.css
doc/tutorials/: ostro-oic-tutorial.md
m4/: attributes.m4  dolt.m4  flowmodules.m4  linuxmicromodules.m4  pinmuxmodules.m4  pkg-check-module-with-func.m4  withbin.m4
pc/: soletta.pc.in
src/samples/: oauth_twitter.fbp
src/shared/: FBP.txt  Kconfig  Makefile  sol-aio-linux.c  sol-aio-riot.c  sol-aio.h  sol-arena.c  sol-arena.h  sol-buffer.c  sol-buffer.h  sol-conffile.c  sol-conffile.h  sol-fbp-graph.c  sol-fbp-internal-log.c  sol-fbp-internal-log.h  sol-fbp-internal-scanner.c  sol-fbp-internal-scanner.h  sol-fbp-parser.c  sol-fbp.h  sol-file-reader.c  sol-file-reader.h  sol-galileo.c  sol-galileo.h  sol-gpio-common.c  sol-gpio-contiki.c  sol-gpio-linux.c  sol-gpio-riot.c  sol-gpio.h  sol-i2c-common.c  sol-i2c-linux.c  sol-i2c-riot.c  sol-i2c.h  sol-iio.c  sol-iio.h  sol-json.c  sol-json.h  sol-lib-loader.c  sol-lib-loader.h  sol-list.h  sol-missing-contiki.c  (+44 more)
src/test/: .gitignore  Kconfig  Makefile  test-arena.c  test-bluetooth.c  test-buffer.c  test-certificate.c  test-coap.c  test-composed-type.c  test-connman.c  test-fbp-scanner.c  test-fbp.c  test-flow-builder.c  test-flow-parser.c  test-flow.c  test-http.c  test-javascript.c  test-json.c  test-list.c  test-lwm2m.c  test-mainloop-glib-integration.c  test-mainloop-implementation.c  test-mainloop-linux.c  test-mainloop-threads-sol-run.c  test-mainloop-threads.c  test-mainloop.c  test-memdesc.c  test-message-digest.c  test-monitors.c  test-netctl.c  test-network.c  test-persistence-memmap.c  test-str-slice.c  test-str-split.c  test-str-table.c  test-util-file.c  test-util.c  test-vector.c  test.c  test.h  (+1 more)
src/test-cpp/: headers.cc.in
src/test-fbp/: .gitignore  README  _adder22.fbp  _exported_options.fbp  bitwise-byte.fbp  bitwise-int.fbp  boolean-and.fbp  boolean-buffer.fbp  boolean-counter.fbp  boolean-filter.fbp  boolean-or.fbp  boolean-toggle.fbp  boolean-validator.fbp  boolean-xor.fbp  byte-comparison.fbp  byte-filter.fbp  composed.fbp  console-blob.fbp  console-boolean-expected.txt  console-boolean.fbp  console-byte-expected.txt  console-byte.fbp  console-composed.fbp  console-direction-vector-expected.txt  console-direction-vector.fbp  console-drange-expected.txt  console-drange.fbp  console-empty-expected.txt  console-empty.fbp  console-error-expected.txt  console-error.fbp  console-http-response.fbp  console-irange-expected.txt  console-irange.fbp  console-json-array.fbp  console-json-object.fbp  console-location.fbp  console-rgb-expected.txt  console-rgb.fbp  console-string-expected.txt  (+169 more)
src/test-stub-gen/: .gitignore  dummy.json
src/tests-fbp/: platform.fbp  wallclock.fbp
tools/: calc-lib-size  check-license.sh  check-style.py  check-style.sh  generate-svg-from-all-fbps  run-fbp-generator  run-fbp-tests  toggle-config
(+1441 files in other folders)
